@@ -67,7 +67,12 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
   <li>
 	<font color=red>*new*</font>
 	[01/2025]
-	<b>two papers</b> (Text to ReLighting (main) and Domain specific QA (workshop) ) are accepted to <a href="https://2024.emnlp.org/">AAAI 2025</a>.
+	<b>Three papers</b> (QA, Inductive Reasoning, LVLM) are accepted to <a href="https://2025.naacl.org/">NAACL 2025</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
+	[01/2025]
+	<b>Two papers</b> (Text to ReLighting (main) and Domain specific QA (workshop) ) are accepted to <a href="https://2024.emnlp.org/">AAAI 2025</a>.
   </li>
   <li>
 	<font color=red>*new*</font>
